demo/kubernetes/demo-config-map.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-config-map
spec:
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never
