demo/kubernetes/hello-kube.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kube-deploy
  labels:
    app: hello-kube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-kube
  template:
    metadata:
      labels:
        app: hello-kube
    spec:
      containers:
      - name: hello-kube
        image:  mendhak/http-https-echo
