demo/kubernetes/demo-nginx-nfs.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-nfs
spec:
  selector:
    app: demo-nginx-nfs
  ports:
  - protocol: TCP
    port: 80
