demo/kubernetes/gitlab.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
spec:
  selector:
    app: gitlab
  ports:
  - protocol: TCP
    name: http
    port: 80
  - protocol: TCP
    port: 22
    name: ssh
  - protocol: TCP
    port: 443
    name: https
