demo/kubernetes/hello-kube.service.ci.yaml

kind: Service
apiVersion: v1
metadata:
  name: hello-kube
spec:
  selector:
    app: hello-kube
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
