demo/kubernetes/nexus.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
spec:
  selector:
    app: nexus
  ports:
  - protocol: TCP
    name: nexus
    port: 8081
  - protocol: TCP
    name: docker-proxy
    port: 8181
  - protocol: TCP
    name: docker-private
    port: 8281
