demo/kubernetes/apple.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apple-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: apple
    http:
      paths:
      - backend:
          serviceName: apple-service
          servicePort: 5678
