demo/kubernetes/demo-nginx-nfs.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-nginx-nfs
  name: demo-nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-nginx-nfs
  template:
    metadata:
      labels:
        app: demo-nginx-nfs
    spec:
      volumes:
        - name: www
          nfs:
            server: 10.223.181.199
            path: /srv/nfs/demo
      containers:
        - image: nginx
          name: nginx
          volumeMounts:
          - name: www
            mountPath: /usr/share/nginx/html
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-nginx-nfs-ingress
spec:
  rules:
  - host: demo-nginx-nfs
    http:
      paths:
      - backend:
          serviceName: demo-nginx-nfs
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-nfs
spec:
  selector:
    app: demo-nginx-nfs
  ports:
  - protocol: TCP
    port: 80
