demo/kubernetes/prometheus.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: 9090
  - host: grafana
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
  - host: alertmanager
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: 9093
